--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ script:
 - pytest tests
 deploy:
   provider: pypi
-  user: "@token"
+  user: "@token"  # quotes required for travis
   # server: https://test.pypi.org/legacy/  # uncomment to do a test deploy
   password:
-    secure: $PASSWORD  # stored in travis
+    secure: $PASSWORD  # stored in travis env var, with `:` after `pypi` escaped (pypi\:)
   on:
     branch: master
   skip_existing: true
