Update pypi usename for travis per syntax chg

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
 - pytest tests
 deploy:
   provider: pypi
-  user: "@token"  # quotes required for travis
+  user: __token__
   # server: https://test.pypi.org/legacy/  # uncomment to do a test deploy
   password:
     secure: $PASSWORD  # stored in travis env var, with `:` after `pypi` escaped (pypi\:)
