--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,18 @@
 dist: xenial
+
 language: python
 python:
 - 3.5
 - 3.6
 - 3.7
+
 notifications:
   email: false
-install:
-- pip install -r requirements.txt
-- pip install pytest
-script:
-- pytest tests
+
+install: pip install -U tox-travis
+
+script: tox
+
 deploy:
   provider: pypi
   user: __token__
