--- a/tox.ini
+++ b/tox.ini
@@ -44,6 +44,6 @@ commands = pre-commit run --all-files
 basepython = python3.7
 extras = docs
 commands =
-    sphinx-build -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
-    sphinx-build -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
+    sphinx-build -b html -d {envtmpdir}/doctrees docs docs/_build/html
+    sphinx-build -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
     python -m doctest README.md
