--- a/tox.ini
+++ b/tox.ini
@@ -14,24 +14,17 @@ python =
 setenv =
     VIRTUALENV_NO_DOWNLOAD=1
 extras = test
-commands = python -m pytest {posargs}
-
-[testenv:py37]
-# Python 3.6+ has a number of compile-time warnings on invalid string escapes.
-# PYTHONWARNINGS=d and --no-compile below make them visible during the Tox run.
-install_command = pip install --no-compile {opts} {packages}
-setenv =
-    PYTHONWARNINGS=d
-extras = test
-commands = coverage run --parallel -m pytest {posargs}
+commands =
+    # todo make this parallel with pytest-xdist
+    python -m pytest {posargs}
 
 [testenv:coverage-report]
 basepython = python3.7
 skip_install = true
-deps = coverage
+extras = test
 commands =
-    coverage combine
-    coverage report
+    # todo make this parallel with pytest-xdist
+    python -m pytest --cov --cov-config=.coveragerc {posargs}
 
 [testenv:lint]
 basepython = python3.7
