--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ commands =
 
 [testenv:coverage-report]
 basepython = python3.7
-skip_install = true
+# skip_install = true
 extras = test
 commands =
     # todo make this parallel with pytest-xdist
