--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,5 +1,16 @@
+version: 2
+
+formats: all
+
 build:
-    image: latest
+  image: latest
 
 python:
-    version: 3.6
+  version: 3.7
+  install:
+    - method: pip
+      path: .
+      extra_requirements:
+         - docs
+    - method: setuptools
+      path: package
